@@ -363,3 +363,4 @@
 
 
 
+<!ENTITY event.showtimeasfree.label                          "Show Time as Free" >
