@@ -358,3 +358,4 @@
 <!ENTITY read.only.link.label            "관련 링크">
 <!ENTITY read.only.delegate.label        "I delegate">
 <!ENTITY read.only.keep-delegator-updated.label "Keep me updated">
+<!ENTITY event.showtimeasfree.label                          "Show Time as Free" >
