@@ -356,3 +356,4 @@
 <!ENTITY read.only.link.label            "Saitas">
 <!ENTITY read.only.delegate.label        "I delegate">
 <!ENTITY read.only.keep-delegator-updated.label "Keep me updated">
+<!ENTITY event.showtimeasfree.label                          "Show Time as Free" >
