@@ -362,3 +362,4 @@
 <!ENTITY read.only.keep-delegator-updated.label "Keep me updated">
 
 
+<!ENTITY event.showtimeasfree.label                          "Show Time as Free" >
