@@ -355,3 +355,4 @@
 <!ENTITY read.only.link.label            "Пов'язане посилання">
 <!ENTITY read.only.delegate.label        "I delegate">
 <!ENTITY read.only.keep-delegator-updated.label "Keep me updated">
+<!ENTITY event.showtimeasfree.label                          "Show Time as Free" >
